# synology-docker-poc

./: .gitignore  pyproject.toml
docker/: Dockerfile  entrypoint.sh
scripts/: build.sh  run.sh
sdp/: cli.py  sdp.py  sdpd.py
